allow dynamic routing with ending digit
