# app/Routes/ApiRoutes.php
@@ -17,6 +17,7 @@ class ApiRoutes {
         $router->get('/api/product/index', [ProductController::class, 'index']);
         $router->post('/api/product', [ProductController::class, 'addProduct']);
         $router->put('/api/product', [ProductController::class, 'updateProduct']);
+        $router->delete('/api/product/{id}', [ProductController::class, 'deleteProduct']);
 
         $router->get('/api/test', [TestController::class, 'testGet']);
         $router->dispatchRequest();
